[package]
name = "rs-rectangle-transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Web
axum = {version = "0.7"}
tower-http = { version = "0.5.2", features = ["fs"] }
# -- Others
more-asserts = "0.3.1"
rand = "0.8.5"